--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,10 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "ansi-html": "^0.0.9",
+    "bootstrap": "^5.3.3",
+    "braces": "^3.0.3",
     "cra-template": "1.2.0",
+    "loader-utils": "^3.3.1",
+    "lodash.template": "^4.5.0",
+    "minimatch": "^10.0.1",
     "react": "^19.0.0",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "^5.0.1",
+    "serialize-javascript": "^6.0.2",
+    "shell-quote": "^1.8.2",
+    "terser": "^5.38.2",
+    "tough-cookie": "^5.1.1",
+    "webpack": "^5.97.1",
+    "webpack-dev-middleware": "^7.4.2",
+    "webpack-dev-server": "^5.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -31,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
