--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,6 @@
     "shell-quote": "^1.8.2",
     "terser": "^5.38.2",
     "tough-cookie": "^5.1.1",
-    "webpack": "^5.97.1",
     "webpack-dev-middleware": "^7.4.2",
     "webpack-dev-server": "^5.2.0"
   },
@@ -47,6 +46,8 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "react-script": "^2.0.5",
+    "webpack": "^5.98.0"
   }
 }
